# stash-manager

./: .dockerignore  .env  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  loop-runner.sh  my-template.xml  pyproject.toml  requirements-dev.txt  requirements.txt  stash-manager.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-build.yml
config/: app_state.yaml.backup  config.yaml.sample
src/: __init__.sync-conflict-20250914-234041-LVKI4TH.py  add_scenes_filter.py  app.py  app.sync-conflict-20250914-234553-LVKI4TH.py  clean_scenes_filter.py  config.py  database_manager.py  db.py  filter.py  local_stash_conditions.py  main.py  one_time_search.py  processor.py  rule_sync_manager.py  scene_filter.py  scheduler.py  schema.sql  stash_api.py  stash_api.sync-conflict-20250915-001512-LVKI4TH.py  stash_api.sync-conflict-20250915-200736-LVKI4TH.py  stashdb.py  stashdb_conditions.py  utils.py  whisparr.py
src/api/: base_stash_client.py  local_stash_client.py  prowlarr_client.py  stash_api.py  stashdb_client.py  whisparr.py
src/config/: config.py
src/core/: database_manager.py  job_setup.py  logging_config.py  signal_handlers.py  utils.py  validation.py
src/filters/: add_scenes_filter.py  clean_scenes_filter.py  filter.py
src/filters/conditions/: local_stash_conditions.py  stashdb_conditions.py
src/services/: rule_sync_manager.py
src/templates/: add_scenes.html  base.html  clean_scenes.html  one_time_search.html  settings.html  sync_settings.html  tasks.html
src/web/: app_factory.py  one_time_search.py  processor.py
src/web/routes/: filter_routes.py  health_routes.py  log_routes.py  main_routes.py  prowlarr_routes.py  settings_routes.py  task_routes.py
src/web/templates/: add_scenes.html  base.html  clean_scenes.html  logs.html  one_time_search.html  prowlarr_dashboard.html  settings.html  sync_settings.html  tasks.html
tools/: checkpoint_manager.py  run_tests.py  session_tracker.py  setup_git.sh
